--- a/trunk/dbus-cxx/debian/changelog
+++ b/trunk/dbus-cxx/debian/changelog
@@ -1,8 +1,9 @@
-dbus-cxx (0.10.0) UNRELEASED; urgency=medium
+dbus-cxx (0.10.0) jessie; urgency=medium
 
+  [ Robert Middleton ]
   * Added file descriptor passing
 
- -- Robert Middleton <robert.middleton@rm5248.com>  Fri, 16 Feb 2018 20:18:21 -0500
+ -- robert <robert@debian>  Sat, 24 Feb 2018 15:57:44 -0500
 
 dbus-cxx (0.8.0) jessie; urgency=medium
 
